deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: creator-store-api
spec:
  selector:
    app.kubernetes.io/name: creator-store-api
  ports:
    - name: http
      port: 8080
      targetPort: http
